# eve_frontier_dataviz

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  Makefile  README.md  build_addon.ps1  coverage.xml  dev_setup_blender_link.ps1
.github/: CI_DOCUMENTATION.md  copilot-instructions.md
.github/workflows/: ci.yml  code-quality.yml  doc-quality.yml  release.yml
blender_addon/: .gitignore  README.md  README_TESTING.md  copilot-instructions.md  pyproject.toml
blender_addon/addon/: __init__.py  data_loader.py  data_state.py  operators.py  panels.py  preferences.py  shader_registry.py  shaders_builtin.py
blender_addon/docs/: ARCHITECTURE.md  BLENDER_BEST_PRACTICES_REVIEW.md  CI_DOCUMENTATION.md  CODE_REVIEW_FINDINGS.md  DATA_MODEL.md  FEATURES.md  HEADLESS_TESTING.md  MANUAL_TESTING.md  NODE_BASED_STRATEGIES.md  README.md  SHADERS.md  SHADER_PROPERTIES.md
blender_addon/scripts/: build_addon.py  dev_reload.py  export_batch.py  markdown_lint.py
blender_addon/src/addon/: __init__.py  data_loader.py  data_state.py  operators.py  panels.py  preferences.py  shader_registry.py  shaders_builtin.py
blender_addon/src/addon/node_groups/: __init__.py  character_rainbow.py  pattern_categories.py  position_encoding.py  proper_noun_highlight.py  uniform_orange.py
blender_addon/src/addon/operators/: __init__.py  _shared.py  build_jumps.py  build_scene_modal.py  camera.py  data_ops.py  jump_analysis.py  lighting.py  property_calculators.py  reference_points.py  shader_apply_async.py  viewport.py  volumetric.py
blender_addon/src/addon/shaders/: char_index_hue.py  child_count_emission.py  name_first_char_hue.py  name_nth_char_hue.py  name_pattern_category.py
blender_addon/tests/: conftest.py  test_collections_generated.py  test_data_loader.py  test_data_loader_branches.py  test_data_loader_cache_and_helpers.py  test_data_loader_debug_print.py  test_data_loader_extra_branches.py  test_data_loader_small_branches.py  test_data_loader_synonyms.py  test_data_state.py  test_data_state_api.py  test_import_addon.py  test_lint_placeholder.py  test_node_graph_validation.py  test_panels_filters_operators.py  test_panels_get_prefs.py  test_preferences_and_init.py  test_property_calculators.py  test_property_calculators_extra.py  test_viewport_hdri_procedural.py
blender_addon/tests/fixtures/: mini.db.sql
