[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-frontier-visualizer"
version = "0.2.0"
description = "Blender data visualization add-on for EVE Frontier static DB"
authors = [{name="Scetrov"}]
license = {text = "MIT"}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=7.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "blender_addon/src"]
# Enforce coverage threshold (>=90%) and fail on Ruff lint issues by running Ruff first in pre-commit.
addopts = "-q --cov --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501"]
per-file-ignores = {"src/addon/__init__.py" = ["F401"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["addon"]
force-single-line = false
